WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 209722
[WPE] Can't create WebGL context after
r259139
https://bugs.webkit.org/show_bug.cgi?id=209722
Summary
[WPE] Can't create WebGL context after r259139
Lauro Moura
Reported
2020-03-29 19:41:11 PDT
Referenced rev is from
bug209098
. This is causing a lot of failures, exiting the test run early. Many with this message: CONSOLE MESSAGE: line 66: Unable to fetch WebGL rendering context for Canvas.
Attachments
Patch
(4.98 KB, patch)
2020-03-30 01:29 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2020-03-29 19:51:55 PDT
Marked the affected tests as failures in
r259185
to avoid masking other failures while this is fixed.
Zan Dobersek
Comment 2
2020-03-30 01:29:23 PDT
Created
attachment 394891
[details]
Patch
Zan Dobersek
Comment 3
2020-03-30 02:30:03 PDT
Comment on
attachment 394891
[details]
Patch Clearing flags on attachment: 394891 Committed
r259190
: <
https://trac.webkit.org/changeset/259190
>
Zan Dobersek
Comment 4
2020-03-30 02:30:07 PDT
All reviewed patches have been landed. Closing bug.
Kenneth Russell
Comment 5
2020-03-30 10:24:46 PDT
Sorry for the breakage and thanks Lauro and Zan for cleaning this up! Please note
Bug 208188
as well - it would be great to get WPE switched over to the ANGLE backend for WebGL.
Zan Dobersek
Comment 6
2020-04-02 00:04:29 PDT
(In reply to Kenneth Russell from
comment #5
)
> Sorry for the breakage and thanks Lauro and Zan for cleaning this up! > > Please note
Bug 208188
as well - it would be great to get WPE switched over > to the ANGLE backend for WebGL.
Switching over to ANGLE would be ideal. I'll review what's possible and/or needed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug