[WPE] Can't create WebGL context after r259139 https://bugs.webkit.org/show_bug.cgi?id=209722

Reviewed by Carlos Garcia Campos.

.:

* Source/cmake/OptionsWPE.cmake: Disable WebGL2 for WPE until
the ANGLE-backed implementation can be used for it.

Source/WebCore:

Adjust the WebXRWebGLRenderingContext tuple depending on the WebGL2
feature being enabled or not.

* Modules/webxr/WebXRWebGLLayer.h:
* Modules/webxr/WebXRWebGLLayer.idl:

LayoutTests:

* platform/wpe/TestExpectations:
Remove catch-all expectations for WebGL tests.


Canonical link: https://commits.webkit.org/222655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259190 268f45cc-cd09-0410-ab3c-d52691b4dbfc